SKY: css change to fix assignee dropdown name line wrapping

--- a/bundles/lincko/app/public/styles/generic/burger.css
+++ b/bundles/lincko/app/public/styles/generic/burger.css
@@ -48,6 +48,7 @@
 	font-size: 20px;
 	color: #3F84B0;
 	width: 100px;
+	white-space: nowrap;
 }
 
 
